Fix viewuse overflow to auto, but still css issues
Panel elements are not properly hidden due to
  transition not hiding all elements completely.

--- a/tracuse_project/assets/styles/app/viewuse.css
+++ b/tracuse_project/assets/styles/app/viewuse.css
@@ -9,7 +9,7 @@
     border: 1px solid #35446A;
     padding: 1em;
     resize: both;
-    overflow: scroll;
+    overflow: auto;
     background-color: #fafafa;
 }
 
